--- a/action.html
+++ b/action.html
@@ -16,7 +16,8 @@
   </style>
 </head>
 
-<body>
+<body onload="PlayerState()">
+  <audio id="player" style="display: none;" autoplay loop preload>  <source src="./img/sol.mp3" type="audio/mp3"> </audio>
   <script src="js/three.js" type="text/javascript"></script>
   <script src="js/OrbitControls.js" type="text/javascript"></script>
   <script src="js/script.js" type="text/javascript"></script>
