--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
   </head>
-  <body>
+  <body onload="PlayerState()">
+    <audio id="player" style="display: none;" autoplay loop preload>  <source src="./img/intro.mp3" type="audio/mp3"> </audio>
     <div class="title-centered">
       <h1><b>Proyecto Final - Animación 3D</b></h1>
     </div>
